# odrive_cpp_sdk

./: .gitignore  CMakeLists.txt  protocol_adria.json
src/: ODrive.cpp  ODrive.h  channel.cpp  channel.h  dualshock.h  main.cpp  motor.cpp  motor.h  odrive_cpp_sdk.cpp  odrive_cpp_sdk.h  robot.cpp  robot.h
